--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
 			<artifactId>le-frog</artifactId>
 			<version>1.0.8</version>
 		</dependency>
+		<dependency>
+			<groupId>de.bripkens</groupId>
+			<artifactId>gravatar4java</artifactId>
+			<version>1.1</version>
+		</dependency>
 	</dependencies>
     
     <build>
