--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -46,6 +46,14 @@
         Java EE exchangeRing
     </display-name>
 
+    <filter>
+        <filter-name>EnableUtf8Filter</filter-name>
+        <filter-class>de.hh.changeRing.jsfExtension.EnableUtf8Filter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>EnableUtf8Filter</filter-name>
+        <url-pattern>*.xhtml</url-pattern>
+    </filter-mapping>
 
     <context-param>
         <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
