created new Theme

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -63,7 +63,7 @@
 
     <context-param>
         <param-name>primefaces.THEME</param-name>
-        <param-value>start</param-value>
+        <param-value>ring</param-value>
     </context-param>
 
     <context-param>
