--- a/pom.xml
+++ b/pom.xml
@@ -230,6 +230,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+          <groupId>org.easytesting</groupId>
+          <artifactId>fest-assert</artifactId>
+          <version>1.4</version>
+        </dependency>
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>13.0.1</version>
