--- a/pom.xml
+++ b/pom.xml
@@ -392,6 +392,11 @@
                     <scope>test</scope>
                 </dependency>
                 <dependency>
+                    <groupId>org.jboss.arquillian.extension</groupId>
+                    <artifactId>arquillian-warp-jsf</artifactId>
+                    <version>1.0.0.Alpha2</version>
+                </dependency>
+                <dependency>
                     <groupId>org.jboss.resteasy</groupId>
                     <artifactId>resteasy-jaxrs</artifactId>
                     <version>2.3.5.Final</version>
