--- a/pom.xml
+++ b/pom.xml
@@ -428,6 +428,7 @@
                     <artifactId>selenium-java</artifactId>
                     <scope>test</scope>
                 </dependency>
+
                 <dependency>
                     <groupId>org.seleniumhq.selenium</groupId>
                     <artifactId>selenium-server</artifactId>
@@ -438,6 +439,21 @@
                             <artifactId>servlet-api-2.5</artifactId>
                         </exclusion>
                     </exclusions>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.jboss.arquillian.extension</groupId>
+                    <artifactId>arquillian-drone-webdriver-depchain</artifactId>
+                    <version>1.1.0.Final</version>
+                    <type>pom</type>
+                    <scope>test</scope>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.jboss.arquillian.extension</groupId>
+                    <artifactId>arquillian-drone-webdriver</artifactId>
+                    <scope>test</scope>
+                    <version>1.1.0.Final</version>
                 </dependency>
                 <dependency>
                     <groupId>org.slf4j</groupId>
